--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "electron/main.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "concurrently \"vite\" \"uvicorn main_api:app --reload --port 8000\" \"wait-on tcp:5173 && electron .\"",
+    "build": "vite build && electron-builder",
     "start": "electron .",
     "lint": "eslint . --ext .ts,.tsx"
   },
@@ -24,6 +24,21 @@
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "concurrently": "^8.2.2",
+    "wait-on": "^7.2.0",
+    "electron-reload": "^2.0.0",
+    "electron-builder": "^24.6.4"
+  },
+  "build": {
+    "appId": "com.omnidev.app",
+    "productName": "OmniDev",
+    "directories": {
+      "output": "dist_electron"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ]
   }
 }
