--- a/package.json
+++ b/package.json
@@ -11,28 +11,31 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.18",
     "@mui/icons-material": "^5.14.18",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@mui/material": "^5.14.18",
+    "@mui/x-date-pickers": "^6.20.2",
+    "@types/date-fns": "^2.5.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "date-fns": "^2.30.0",
     "electron": "^25.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.0.0",
+    "concurrently": "^8.2.2",
+    "electron-builder": "^24.6.4",
+    "electron-reload": "^1.5.0",
     "eslint": "^8.0.0",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0",
     "vite": "^4.0.0",
-    "concurrently": "^8.2.2",
-    "wait-on": "^7.2.0",
-    "electron-reload": "^1.5.0",
-    "electron-builder": "^24.6.4"
+    "wait-on": "^7.2.0"
   },
   "build": {
     "appId": "com.omnidev.app",
